add schema for resource package
