# docs/api.swagger.json
@@ -7,6 +7,9 @@
   "tags": [
     {
       "name": "ProjectService"
+    },
+    {
+      "name": "ResourceService"
     }
   ],
   "consumes": [
@@ -89,6 +92,37 @@
         ]
       }
     },
+    "/v1alpha1/{name_1}": {
+      "get": {
+        "operationId": "ResourceService_GetResource",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1Resource"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "name_1",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": "projects/[^/]+/resources/[^/]+"
+          }
+        ],
+        "tags": [
+          "ResourceService"
+        ]
+      }
+    },
     "/v1alpha1/{name}": {
       "get": {
         "operationId": "ProjectService_GetProject",
@@ -147,6 +181,135 @@
         ],
         "tags": [
           "ProjectService"
+        ]
+      }
+    },
+    "/v1alpha1/{name}:unregister": {
+      "post": {
+        "operationId": "ResourceService_UnregisterResource",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": "projects/[^/]+/resources/[^/]+"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ResourceServiceUnregisterResourceBody"
+            }
+          }
+        ],
+        "tags": [
+          "ResourceService"
+        ]
+      }
+    },
+    "/v1alpha1/{parent}/resources": {
+      "get": {
+        "operationId": "ResourceService_ListResources",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ListResourcesResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "parent",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": "projects/[^/]+"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "pageToken",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ResourceService"
+        ]
+      }
+    },
+    "/v1alpha1/{parent}/resources:register": {
+      "post": {
+        "operationId": "ResourceService_RegisterResource",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1Resource"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "parent",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": "projects/[^/]+"
+          },
+          {
+            "name": "resource",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1Resource"
+            }
+          },
+          {
+            "name": "resourceId",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ResourceService"
         ]
       }
     },
@@ -212,6 +375,9 @@
     }
   },
   "definitions": {
+    "ResourceServiceUnregisterResourceBody": {
+      "type": "object"
+    },
     "protobufAny": {
       "type": "object",
       "properties": {
@@ -255,6 +421,21 @@
         }
       }
     },
+    "v1ListResourcesResponse": {
+      "type": "object",
+      "properties": {
+        "resources": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1Resource"
+          }
+        },
+        "nextPageToken": {
+          "type": "string"
+        }
+      }
+    },
     "v1Project": {
       "type": "object",
       "properties": {
@@ -276,6 +457,85 @@
           "type": "string",
           "format": "date-time",
           "readOnly": true
+        }
+      }
+    },
+    "v1Resource": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "title": "The resource name.\nFormat: `projects/{project}/resources/{resource}`"
+        },
+        "capabilities": {
+          "$ref": "#/definitions/v1ResourceCapabilities",
+          "description": "Capabilities of this resource, populated by the system.",
+          "readOnly": true
+        },
+        "createTime": {
+          "type": "string",
+          "format": "date-time",
+          "description": "Output only. Creation timestamp.",
+          "readOnly": true
+        },
+        "address": {
+          "type": "string",
+          "description": "Network address for accessing the resource (e.g.,\n\"worker-123.example.com:8080\")."
+        }
+      },
+      "description": "Resource represents a computation node in the system with specific\ncapabilities.",
+      "required": [
+        "address"
+      ]
+    },
+    "v1ResourceCapabilities": {
+      "type": "object",
+      "properties": {
+        "cpuCores": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Number of CPU cores available."
+        },
+        "memoryBytes": {
+          "type": "string",
+          "format": "int64",
+          "description": "Amount of memory in bytes."
+        },
+        "gpuCount": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Number of GPU devices available."
+        },
+        "gpuType": {
+          "type": "string",
+          "description": "Type of GPU available (e.g., \"NVIDIA_A100\", \"AMD_MI210\")."
+        },
+        "storageBytes": {
+          "type": "string",
+          "format": "int64",
+          "description": "Storage capacity in bytes."
+        },
+        "networkBandwidthBps": {
+          "type": "string",
+          "format": "int64",
+          "description": "Network bandwidth in bits per second."
+        },
+        "supportedAgents": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": "List of agent types this resource can execute."
+        },
+        "maxConcurrentTasks": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Maximum number of concurrent tasks this resource can handle."
+        },
+        "minTaskDurationS": {
+          "type": "number",
+          "format": "float",
+          "description": "Minimum task duration in seconds this resource is optimized for."
         }
       }
     }
