# pkg/dart/gateway/resource/v1/resource.pb.go
@@ -1,0 +1,293 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.10
+// 	protoc        v6.33.1
+// source: dart/gateway/resource/v1/resource.proto
+
+package resource
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+// Resource represents a computation node in the system with specific
+// capabilities.
+type Resource struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	// The resource name.
+	// Format: `projects/{project}/resources/{resource}`
+	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	// Capabilities of this resource, populated by the system.
+	Capabilities *ResourceCapabilities `protobuf:"bytes,2,opt,name=capabilities,proto3" json:"capabilities,omitempty"`
+	// Output only. Creation timestamp.
+	CreateTime *timestamppb.Timestamp `protobuf:"bytes,3,opt,name=create_time,json=createTime,proto3" json:"create_time,omitempty"`
+	// Network address for accessing the resource (e.g.,
+	// "worker-123.example.com:8080").
+	Address       string `protobuf:"bytes,4,opt,name=address,proto3" json:"address,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *Resource) Reset() {
+	*x = Resource{}
+	mi := &file_dart_gateway_resource_v1_resource_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *Resource) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Resource) ProtoMessage() {}
+
+func (x *Resource) ProtoReflect() protoreflect.Message {
+	mi := &file_dart_gateway_resource_v1_resource_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Resource.ProtoReflect.Descriptor instead.
+func (*Resource) Descriptor() ([]byte, []int) {
+	return file_dart_gateway_resource_v1_resource_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *Resource) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *Resource) GetCapabilities() *ResourceCapabilities {
+	if x != nil {
+		return x.Capabilities
+	}
+	return nil
+}
+
+func (x *Resource) GetCreateTime() *timestamppb.Timestamp {
+	if x != nil {
+		return x.CreateTime
+	}
+	return nil
+}
+
+func (x *Resource) GetAddress() string {
+	if x != nil {
+		return x.Address
+	}
+	return ""
+}
+
+type ResourceCapabilities struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	// Number of CPU cores available.
+	CpuCores int32 `protobuf:"varint,1,opt,name=cpu_cores,json=cpuCores,proto3" json:"cpu_cores,omitempty"`
+	// Amount of memory in bytes.
+	MemoryBytes int64 `protobuf:"varint,2,opt,name=memory_bytes,json=memoryBytes,proto3" json:"memory_bytes,omitempty"`
+	// Number of GPU devices available.
+	GpuCount int32 `protobuf:"varint,3,opt,name=gpu_count,json=gpuCount,proto3" json:"gpu_count,omitempty"`
+	// Type of GPU available (e.g., "NVIDIA_A100", "AMD_MI210").
+	GpuType string `protobuf:"bytes,4,opt,name=gpu_type,json=gpuType,proto3" json:"gpu_type,omitempty"`
+	// Storage capacity in bytes.
+	StorageBytes int64 `protobuf:"varint,5,opt,name=storage_bytes,json=storageBytes,proto3" json:"storage_bytes,omitempty"`
+	// Network bandwidth in bits per second.
+	NetworkBandwidthBps int64 `protobuf:"varint,6,opt,name=network_bandwidth_bps,json=networkBandwidthBps,proto3" json:"network_bandwidth_bps,omitempty"`
+	// List of agent types this resource can execute.
+	SupportedAgents []string `protobuf:"bytes,7,rep,name=supported_agents,json=supportedAgents,proto3" json:"supported_agents,omitempty"`
+	// Maximum number of concurrent tasks this resource can handle.
+	MaxConcurrentTasks int32 `protobuf:"varint,8,opt,name=max_concurrent_tasks,json=maxConcurrentTasks,proto3" json:"max_concurrent_tasks,omitempty"`
+	// Minimum task duration in seconds this resource is optimized for.
+	MinTaskDurationS float32 `protobuf:"fixed32,9,opt,name=min_task_duration_s,json=minTaskDurationS,proto3" json:"min_task_duration_s,omitempty"`
+	unknownFields    protoimpl.UnknownFields
+	sizeCache        protoimpl.SizeCache
+}
+
+func (x *ResourceCapabilities) Reset() {
+	*x = ResourceCapabilities{}
+	mi := &file_dart_gateway_resource_v1_resource_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *ResourceCapabilities) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ResourceCapabilities) ProtoMessage() {}
+
+func (x *ResourceCapabilities) ProtoReflect() protoreflect.Message {
+	mi := &file_dart_gateway_resource_v1_resource_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ResourceCapabilities.ProtoReflect.Descriptor instead.
+func (*ResourceCapabilities) Descriptor() ([]byte, []int) {
+	return file_dart_gateway_resource_v1_resource_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *ResourceCapabilities) GetCpuCores() int32 {
+	if x != nil {
+		return x.CpuCores
+	}
+	return 0
+}
+
+func (x *ResourceCapabilities) GetMemoryBytes() int64 {
+	if x != nil {
+		return x.MemoryBytes
+	}
+	return 0
+}
+
+func (x *ResourceCapabilities) GetGpuCount() int32 {
+	if x != nil {
+		return x.GpuCount
+	}
+	return 0
+}
+
+func (x *ResourceCapabilities) GetGpuType() string {
+	if x != nil {
+		return x.GpuType
+	}
+	return ""
+}
+
+func (x *ResourceCapabilities) GetStorageBytes() int64 {
+	if x != nil {
+		return x.StorageBytes
+	}
+	return 0
+}
+
+func (x *ResourceCapabilities) GetNetworkBandwidthBps() int64 {
+	if x != nil {
+		return x.NetworkBandwidthBps
+	}
+	return 0
+}
+
+func (x *ResourceCapabilities) GetSupportedAgents() []string {
+	if x != nil {
+		return x.SupportedAgents
+	}
+	return nil
+}
+
+func (x *ResourceCapabilities) GetMaxConcurrentTasks() int32 {
+	if x != nil {
+		return x.MaxConcurrentTasks
+	}
+	return 0
+}
+
+func (x *ResourceCapabilities) GetMinTaskDurationS() float32 {
+	if x != nil {
+		return x.MinTaskDurationS
+	}
+	return 0
+}
+
+var File_dart_gateway_resource_v1_resource_proto protoreflect.FileDescriptor
+
+const file_dart_gateway_resource_v1_resource_proto_rawDesc = "" +
+	"\n" +
+	"'dart/gateway/resource/v1/resource.proto\x12\x18dart.gateway.resource.v1\x1a\x19google/api/resource.proto\x1a\x1fgoogle/api/field_behavior.proto\x1a\x1fgoogle/protobuf/timestamp.proto\x1a\x1cgoogle/api/annotations.proto\"\xd1\x02\n" +
+	"\bResource\x121\n" +
+	"\x04name\x18\x01 \x01(\tB\x1d\xe0A\b\xfaA\x17\n" +
+	"\x15dart.gateway/ResourceR\x04name\x12W\n" +
+	"\fcapabilities\x18\x02 \x01(\v2..dart.gateway.resource.v1.ResourceCapabilitiesB\x03\xe0A\x03R\fcapabilities\x12@\n" +
+	"\vcreate_time\x18\x03 \x01(\v2\x1a.google.protobuf.TimestampB\x03\xe0A\x03R\n" +
+	"createTime\x12\x1d\n" +
+	"\aaddress\x18\x04 \x01(\tB\x03\xe0A\x02R\aaddress:X\xeaAU\n" +
+	"\x15dart.gateway/Resource\x12'projects/{project}/resources/{resource}*\tresources2\bresource\"\xf3\x02\n" +
+	"\x14ResourceCapabilities\x12\x1b\n" +
+	"\tcpu_cores\x18\x01 \x01(\x05R\bcpuCores\x12!\n" +
+	"\fmemory_bytes\x18\x02 \x01(\x03R\vmemoryBytes\x12\x1b\n" +
+	"\tgpu_count\x18\x03 \x01(\x05R\bgpuCount\x12\x19\n" +
+	"\bgpu_type\x18\x04 \x01(\tR\agpuType\x12#\n" +
+	"\rstorage_bytes\x18\x05 \x01(\x03R\fstorageBytes\x122\n" +
+	"\x15network_bandwidth_bps\x18\x06 \x01(\x03R\x13networkBandwidthBps\x12)\n" +
+	"\x10supported_agents\x18\a \x03(\tR\x0fsupportedAgents\x120\n" +
+	"\x14max_concurrent_tasks\x18\b \x01(\x05R\x12maxConcurrentTasks\x12-\n" +
+	"\x13min_task_duration_s\x18\t \x01(\x02R\x10minTaskDurationSBDZBgithub.com/10Narratives/dart/pkg/dart/gateway/resource/v1;resourceb\x06proto3"
+
+var (
+	file_dart_gateway_resource_v1_resource_proto_rawDescOnce sync.Once
+	file_dart_gateway_resource_v1_resource_proto_rawDescData []byte
+)
+
+func file_dart_gateway_resource_v1_resource_proto_rawDescGZIP() []byte {
+	file_dart_gateway_resource_v1_resource_proto_rawDescOnce.Do(func() {
+		file_dart_gateway_resource_v1_resource_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_dart_gateway_resource_v1_resource_proto_rawDesc), len(file_dart_gateway_resource_v1_resource_proto_rawDesc)))
+	})
+	return file_dart_gateway_resource_v1_resource_proto_rawDescData
+}
+
+var file_dart_gateway_resource_v1_resource_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_dart_gateway_resource_v1_resource_proto_goTypes = []any{
+	(*Resource)(nil),              // 0: dart.gateway.resource.v1.Resource
+	(*ResourceCapabilities)(nil),  // 1: dart.gateway.resource.v1.ResourceCapabilities
+	(*timestamppb.Timestamp)(nil), // 2: google.protobuf.Timestamp
+}
+var file_dart_gateway_resource_v1_resource_proto_depIdxs = []int32{
+	1, // 0: dart.gateway.resource.v1.Resource.capabilities:type_name -> dart.gateway.resource.v1.ResourceCapabilities
+	2, // 1: dart.gateway.resource.v1.Resource.create_time:type_name -> google.protobuf.Timestamp
+	2, // [2:2] is the sub-list for method output_type
+	2, // [2:2] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
+}
+
+func init() { file_dart_gateway_resource_v1_resource_proto_init() }
+func file_dart_gateway_resource_v1_resource_proto_init() {
+	if File_dart_gateway_resource_v1_resource_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_dart_gateway_resource_v1_resource_proto_rawDesc), len(file_dart_gateway_resource_v1_resource_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_dart_gateway_resource_v1_resource_proto_goTypes,
+		DependencyIndexes: file_dart_gateway_resource_v1_resource_proto_depIdxs,
+		MessageInfos:      file_dart_gateway_resource_v1_resource_proto_msgTypes,
+	}.Build()
+	File_dart_gateway_resource_v1_resource_proto = out.File
+	file_dart_gateway_resource_v1_resource_proto_goTypes = nil
+	file_dart_gateway_resource_v1_resource_proto_depIdxs = nil
+}
